--- a/source/index.html
+++ b/source/index.html
@@ -6,16 +6,27 @@
     <title>Drink2Go Интерент-магазин кофейных напитков</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page-body">
     <header class="main-header page-header">
       <div class="main-header__wrapper">
-        <a class="main-header__logo-icon" href="index.html"><span class="main-header__letters-left">D</span>
-          <svg class="logo__image" role="img" aria-label="Логотип ароматное зерно кофе.">
+        <a class="main-header__logo" href="index.html"><span class="main-header__letters-left"></span>
+          <svg class="main-header__logo-image" role="img" aria-label="Логотип ароматное зерно кофе.">
             <use xlink:href="img/icons/stack.svg#logo-desktop"></use>
-          </svg><span class="main-header__letters-right">G</span>
+          </svg><span class="main-header__letters-right"></span>
+        </a>
+        <a class="main-header__icon" href="#">
+          <svg class="main-header__logo-icon" role="img" aria-label="Переход в кабинет пользователя.">
+            <use xlink:href="img/icons/stack.svg#user"></use>
+          </svg>
+        </a>
+        <a class="main-header__icon" href="#">
+          <svg class="main-header__logo-icon" role="img" aria-label="Переход в корзину.">
+            <use xlink:href="img/icons/stack.svg#basket"></use>
+          </svg>
         </a>
       </div>
       <nav class="menu-nav menu-nav--nojs">
@@ -42,18 +53,45 @@
           </li>
         </ul>
       </nav>
-      <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span>
+      <button class="button page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span>
       </button>
     </header>
-    <main class="catalog-container">
+    <main class="main-container catalog-container">
       <div class="swiper">
         <!-- Additional required wrapper -->
-        <div class="swiper-wrapper">
+        <div class="swiper-container" pagination="true" pagination-type="progressbar" navigation="true">
           <!-- Slides -->
-          <div class="swiper-slide">Slide 1</div>
-          <div class="swiper-slide">Slide 2</div>
-          <div class="swiper-slide">Slide 3</div>
-          ...
+          <div class="swiper-slide">
+            <picture>
+              <source media="(min-width: 768px)" type="image/webp" srcset="img/products/coffee-variant1.webp, img/products/coffee-variant1@2x.webp 2x">
+              <img class="swiper__image" src="img/products/coffee-variant1.png" srcset="img/products/coffee-variant1@2x.png 2x" width="130" height="188" loading="lazy" alt="Свежийй кофе в жестяной банке.">
+            </picture>
+            <section class="swiper__desc">
+              <h3 class="swiper__title">Декаф Флэт Уайт</h3>
+              <p class="swipe__text">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+            </section>
+          </div>
+          <div class="swiper-slide">
+            <picture>
+              <source media="(min-width: 768px)" type="image/webp" srcset="img/products/coffee-variant2.webp, img/products/coffee-variant2@2x.webp 2x">
+              <img class="swiper__image" src="img/products/coffee-variant2.png" srcset="img/products/coffee-variant2@2x.png 2x" width="130" height="188" loading="lazy" alt="Свежийй кофе в жестяной банке.">
+            </picture>
+            <section class="swiper__desc">
+              <h3 class="swiper__title">Декаф Флэт Уайт</h3>
+              <p class="swiper__text">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+            </section>
+          </div>
+          <div class="swiper-slide">
+            <picture>
+              <source media="(min-width: 768px)" type="image/webp" srcset="img/products/coffee-variant3.webp, img/products/coffee-variant3@2x.webp 2x">
+              <img class="swiper__image" src="img/products/coffee-variant3.png" srcset="img/products/coffee-variant3@2x.png 2x"  loading="lazy" alt="Свежийй кофе в жестяной банке.">
+            </picture>
+            <section class="swiper__desc">
+              <h3 class="swiper__title">Декаф Флэт Уайт</h3>
+              <p class="swiper__text">Свежесваренный кофе без кофеина из Эфиопии с натуральным фермерским молоком — то, что нужно для расслабления после тяжёлого рабочего дня</p>
+            </section>
+          </div>
+          </div>
         </div>
         <!-- If we need pagination -->
         <div class="swiper-pagination"></div>
@@ -63,23 +101,21 @@
         <div class="swiper-button-next"></div>
 
         <!-- If we need scrollbar -->
-        <div class="swiper-scrollbar"></div>
       </div>
       <section class="advantages">
-        <p>Преимущества</p>
         <h2 class="advantages__title">Главные причины выбрать Drink2Go</h2>
         <ul class="advantages__wrapper">
-          <li>
+          <li class="advantages__item">
             <h3 class="advantages__name">Скорость</h3>
             <p class="advantages__description advantages__description-speed">Готовый напиток всегда под рукой — просто открой банку
             </p>
           </li>
-          <li>
+          <li class="advantages__item">
             <h3 class="advantages__name">Удобство</h3>
             <p class="advantages__description advantages__description-fit">Легко помещается и в карман, и в маленькую сумочку
             </p>
           </li>
-          <li>
+          <li class="advantages__item">
             <h3 class="advantages__name">Бодрость</h3>
             <p class="advantages__description advantages__description-energy">Сбалансированная доза кофеина даст мощный заряд энергии
             </p>
@@ -135,16 +171,16 @@
               </li>
               <li class="filter__item">
                 <label class="control">
-                  <input class="control__input-type visually-hidden" type="radio" name="products-type" value="veggy">
+                  <input class="control__input--type visually-hidden" type="radio" name="products-type" value="veggy">
                   <span class="control__mark-type"></span>
                   <span class="control__label">Только растительное</span>
                 </label>
               </li>
               <li class="filter__item">
                 <label class="control">
-                  <input class="control__input-type visually-hidden" type="radio" name="products-type" value="no">
+                  <input class="control__input--type visually-hidden" type="radio" name="products-type" value="no">
                   <span class="control__mark-type"></span>
-                  <span class="control__label">Без молока></span>
+                  <span class="control__label">Без молока</span>
                 </label>
               </li>
             </ul>
@@ -156,7 +192,7 @@
             <ul class="filter__list">
               <li class="filter__item">
                 <label class="control">
-                <input class="control__input visually-hidden" type="checkbox" name="Brazil" checked>
+                  <input class="control__input visually-hidden" type="checkbox" name="Brazil" checked>
                   <span class="control__mark checked"></span>
                   <span class="control__label">Бразилия</span>
                 </label>
@@ -171,23 +207,23 @@
               </li>
               <li class="filter__item">
                 <label class="control">
-                <input class="control__input visually-hidden" type="checkbox" name="Colombia">
-                <span class="control__mark"></span>
-                <span class="control__label">Колумбия</span>
+                  <input class="control__input visually-hidden" type="checkbox" name="Colombia">
+                  <span class="control__mark"></span>
+                  <span class="control__label">Колумбия</span>
                 </label>
               </li>
               <li class="filter__item">
                 <label class="control">
-                <input class="control__input visually-hidden" type="checkbox" name="Costa-Rica">
-                <span class="control__mark"></span>
-                <span class="control__label">Коста-Рика</span>
+                  <input class="control__input visually-hidden" type="checkbox" name="Costa-Rica">
+                  <span class="control__mark"></span>
+                  <span class="control__label">Коста-Рика</span>
                 </label>
               </li>
               <li class="filter__item">
                 <label class="control">
-                <input class="control__input visually-hidden" type="checkbox" name="Peru">
-                <span class="control__mark"></span>
-                <span class="control__label">Перу</span>
+                  <input class="control__input visually-hidden" type="checkbox" name="Peru">
+                  <span class="control__mark"></span>
+                  <span class="control__label">Перу</span>
                 </label>
               </li>
             </ul>
@@ -200,11 +236,12 @@
       </section>
       <div class="sorting">
         <div class="sorting__container">
-          <p class="sorting__title">сортировка</p>
-          <select class="select__control" aria-label="Сортировка">
-            <option value="select__popular">Сначала популярные</option>
-            <option value="select__cheap" selected>по умолчанию</option>
-            <option value="select__expensive">Сначала недорогие</option>
+          <p class="sorting__title">Cортировка:</p>
+          <select class="sorting__control" aria-label="Сортировка">
+            <option value="sorting__default">по умолчанию</option>
+            <option value="sorting__expensive">cначала дорогие</option>
+            <option value="sorting__cheap" selected>cначала дешёвые</option>
+            <option value="sorting__popular">высокий рейтинг</option>
           </select>
         </div>
       </div>
@@ -215,9 +252,8 @@
           <li class="product-card">
             <a href="#">
               <picture>
-                <source media="(min-width: 768px)" type="image/webp" srcset="img/product/cat-energy-chicken-500.webp, img/product/cat-energy-chicken-500-desktop-2x.webp 2x">
-                <source media="(min-width: 768px)" srcset="img/product/cat-energy-chicken-500.png, img/product/cat-energy-chicken-500-desktop-2x.png 2x">
-                <img class="product-card__image product-card__small" src="img/product/small-cat-energy-chicken-500.png" srcset="img/product/cat-energy-chicken-500-mobile-2x.png 2x" width="68" height="78" loading="lazy" alt="Свежийй кофе в жестяной банке.">
+                <source media="(min-width: 768px)" type="image/webp" srcset="img/products/coffee-variant1.webp, img/products/coffee-variant1@2x.webp 2x">
+                <img class="product-card__image product-card__small" src="img/products/coffee-variant1.png" srcset="img/products/coffee-variant1@2x.png 2x" width="68" height="78" loading="lazy" alt="Свежийй кофе в жестяной банке.">
               </picture>
             </a>
             <div class="product-card__wrapper">
@@ -336,5 +372,7 @@
         </div>
       </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
+    <script src="js/script.js" defer></script>
   </body>
 </html>
