--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
   </head>
   <body class="page-body">
     <header class="main-header page-header">
@@ -105,24 +105,23 @@
       <section class="advantages">
         <h2 class="advantages__title">Главные причины выбрать Drink2Go</h2>
         <ul class="advantages__wrapper">
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--speed">
             <h3 class="advantages__name">Скорость</h3>
-            <p class="advantages__description advantages__description-speed">Готовый напиток всегда под рукой — просто открой банку
+            <p class="advantages__description advantages__description--speed">Готовый напиток всегда под рукой — просто открой банку
             </p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--fit">
             <h3 class="advantages__name">Удобство</h3>
-            <p class="advantages__description advantages__description-fit">Легко помещается и в карман, и в маленькую сумочку
+            <p class="advantages__description advantages__description--fit">Легко помещается и в карман, и в маленькую сумочку
             </p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--energy">
             <h3 class="advantages__name">Бодрость</h3>
-            <p class="advantages__description advantages__description-energy">Сбалансированная доза кофеина даст мощный заряд энергии
+            <p class="advantages__description advantages__description--energy">Сбалансированная доза кофеина даст мощный заряд энергии
             </p>
-          </li>
-          <li>
+          <li class="advantages__item">
             <h3 class="advantages__name">Экологичность</h3>
-            <p class="advantages__description advantages__description-eco">Вся упаковка сделана
+            <p class="advantages__description advantages__description--eco">Вся упаковка сделана
               из перерабатываемых материалов
             </p>
           </li>
@@ -253,7 +252,112 @@
             <a href="#">
               <picture>
                 <source media="(min-width: 768px)" type="image/webp" srcset="img/products/coffee-variant1.webp, img/products/coffee-variant1@2x.webp 2x">
-                <img class="product-card__image product-card__small" src="img/products/coffee-variant1.png" srcset="img/products/coffee-variant1@2x.png 2x" width="68" height="78" loading="lazy" alt="Свежийй кофе в жестяной банке.">
+                <img class="product-card__image product-card__small" src="img/products/coffee-variant1.png" srcset="img/products/coffee-variant1@2x.png 2x" width="130" height="188" loading="lazy" alt="Свежийй кофе в жестяной банке.">
+              </picture>
+            </a>
+            <div class="product-card__wrapper">
+              <a class="product-card__link" href="#">
+                <h3 class="product-card__title">Декаф Флэт Уайт
+                </h3>
+              </a>
+              <p class="product-card__description">
+                Кофе без кофеина из Эфиопии с натуральным фермерским молоком
+              </p>
+            </div>
+            <div class="product-card__order">
+              <span class="product-card__price">225&#8381;</span>
+              <a class="product-card__button button">В корзину</a>
+            </div>
+          </li>
+          <li class="product-card">
+            <a href="#">
+              <picture>
+                <source media="(min-width: 768px)" type="image/webp" srcset="img/products/coffee-variant2.webp, img/products/coffee-variant2@2x.webp 2x">
+                <img class="product-card__image product-card__small" src="img/products/coffee-variant2.png" srcset="img/products/coffee-variant2@2x.png 2x" width="130" height="188" loading="lazy" alt="Свежийй кофе в жестяной банке.">
+              </picture>
+            </a>
+            <div class="product-card__wrapper">
+              <a class="product-card__link" href="#">
+                <h3 class="product-card__title">Декаф Флэт Уайт
+                </h3>
+              </a>
+              <p class="product-card__description">
+                Кофе без кофеина из Эфиопии с натуральным фермерским молоком
+              </p>
+            </div>
+            <div class="product-card__order">
+              <span class="product-card__price">225&#8381;</span>
+              <a class="product-card__button button">В корзину</a>
+            </div>
+          </li>
+          <li class="product-card">
+            <a href="#">
+              <picture>
+                <source media="(min-width: 768px)" type="image/webp" srcset="img/products/coffee-variant3.webp, img/products/coffee-variant3@2x.webp 2x">
+                <img class="product-card__image product-card__small" src="img/products/coffee-variant3.png" srcset="img/products/coffee-variant3@2x.png 2x" width="130" height="188" loading="lazy" alt="Свежийй кофе в жестяной банке.">
+              </picture>
+            </a>
+            <div class="product-card__wrapper">
+              <a class="product-card__link" href="#">
+                <h3 class="product-card__title">Декаф Флэт Уайт
+                </h3>
+              </a>
+              <p class="product-card__description">
+                Кофе без кофеина из Эфиопии с натуральным фермерским молоком
+              </p>
+            </div>
+            <div class="product-card__order">
+              <span class="product-card__price">225&#8381;</span>
+              <a class="product-card__button button">В корзину</a>
+            </div>
+          </li>
+          <li class="product-card">
+            <a href="#">
+              <picture>
+                <source media="(min-width: 768px)" type="image/webp" srcset="img/products/coffee-variant4.webp, img/products/coffee-variant4@2x.webp 2x">
+                <img class="product-card__image" src="img/products/coffee-variant4.png" srcset="img/products/coffee-variant4@2x.png 2x" width="130" height="188" loading="lazy" alt="Свежийй кофе в жестяной банке.">
+              </picture>
+            </a>
+            <div class="product-card__wrapper">
+              <a class="product-card__link" href="#">
+                <h3 class="product-card__title">Декаф Флэт Уайт
+                </h3>
+              </a>
+              <p class="product-card__description">
+                Кофе без кофеина из Эфиопии с натуральным фермерским молоком
+              </p>
+            </div>
+            <div class="product-card__order">
+              <span class="product-card__price">225&#8381;</span>
+              <a class="product-card__button button">В корзину</a>
+            </div>
+          </li>
+          <li class="product-card">
+            <a href="#">
+              <picture>
+                <source media="(min-width: 768px)" type="image/webp" srcset="img/products/coffee-variant5.webp, img/products/coffee-variant5@2x.webp 2x">
+                <img class="product-card__image" src="img/products/coffee-variant5.png" srcset="img/products/coffee-variant5@2x.png 2x" width="130" height="188" loading="lazy" alt="Свежийй кофе в жестяной банке.">
+              </picture>
+            </a>
+            <div class="product-card__wrapper">
+              <a class="product-card__link" href="#">
+                <h3 class="product-card__title">Декаф Флэт Уайт
+                </h3>
+              </a>
+              <p class="product-card__description">
+                Кофе без кофеина из Эфиопии с натуральным фермерским молоком
+              </p>
+            </div>
+            <div class="product-card__order">
+              <span class="product-card__price">225&#8381;</span>
+              <a class="product-card__button button">В корзину</a>
+            </div>
+          </li>
+          <li class="product-card">
+            <a href="#">
+              <picture>
+                <source media="(min-width: 768px)" type="image/webp" srcset="img/products/coffee-variant6.webp, img/products/coffee-variant6@2x.webp 2x">
+                <img class="product-card__image" src="img/products/coffee-variant6.png" srcset="img/products/coffee-variant6@2x.png 2x" width="130" height="188" loading="lazy" alt="Свежийй кофе в жестяной банке.">
               </picture>
             </a>
             <div class="product-card__wrapper">
@@ -274,27 +378,26 @@
         <div class="catalog__pagination">
           <ul class="pagination">
             <li class="pagination__item">
-              <a class="pagination__link"><span class="pagination__content"></span></a>
+              <a class="pagination__link"><span class="pagination__left"></span></a>
             </li>
             <li class="pagination__item">
               <a class="pagination__link" href="#">1</a>
             </li>
-            <li class="pagination__item">
+            <li class="pagination__item pagination__item--current">
               <a class="pagination__link" href="#">2</a>
             </li>
             <li class="pagination__item">
               <a class="pagination__link" href="#">3</a>
             </li>
             <li class="pagination__item">
-              <a class="pagination__link" href="#"><span class="pagination__content"></span></a>
+              <a class="pagination__link" href="#"><span class="pagination__right"></span></a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="page-footer">
-      <div class="location">
-        <iframe class="location-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52385.135657410996!2d-111.83015816422795!3d34.854443815803634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1670920256259!5m2!1sru!2sru" width="320" height="350" style="border: 0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="location" id="map" style = "width: 100%; height: 580px">
       </div>
       <div class="page-footer__block">
         <div class="page-footer__links">
@@ -373,6 +476,7 @@
       </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script src="js/script.js" defer></script>
   </body>
 </html>
