--- a/source/index.html
+++ b/source/index.html
@@ -440,7 +440,7 @@
       </div>
     </main>
     <footer class="page-footer">
-      <div class="location" id="map" style = "width: 100%; height: 580px">
+      <div class="page-footer__location location" id="map" style = "width: 100%; height: 580px">
       </div>
       <div class="page-footer__block">
         <div class="page-footer__links">
