--- a/source/index.html
+++ b/source/index.html
@@ -199,28 +199,28 @@
                 <li class="filter__item">
                   <label class="control">
                   <input class="control__input control__input--radio visually-hidden" type="radio" name="products-type" value="empty" checked>
-                  <span class="control__mark control__mark--radio"></span>
+                  <span class="control__radio"></span>
                   <span class="control__label">Неважно</span>
                   </label>
                 </li>
                 <li class="filter__item">
                   <label class="control">
                     <input class="control__input control__input--radio visually-hidden" type="radio" name="products-type" value="ordynary">
-                    <span class="control__mark control__mark--radio"></span>
+                    <span class="control__radio"></span>
                     <span class="control__label">Только животное</span>
                   </label>
                 </li>
                 <li class="filter__item">
                   <label class="control">
                     <input class="control__input control__input--radio visually-hidden" type="radio" name="products-type" value="veggy">
-                    <span class="control__mark control__mark--radio"></span>
+                    <span class="control__radio"></span>
                     <span class="control__label">Только растительное</span>
                   </label>
                 </li>
                 <li class="filter__item">
                   <label class="control">
                     <input class="control__input control__input--radio visually-hidden" type="radio" name="products-type" value="no">
-                    <span class="control__mark control__mark--radio"></span>
+                    <span class="control__radio"></span>
                     <span class="control__label">Без молока</span>
                   </label>
                 </li>
