--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
   </head>
   <body class="page-body">
     <header class="main-header page-header">
-      <h1 class="visually-hidden">Интерент-магазин кофейных напитков</h1>
+      <h1 class="visually-hidden">Интернет-магазин кофейных напитков</h1>
       <div class="main-header__wrapper">
         <a class="main-header__logo" href="index.html"><span class="main-header__letters-left"></span>
           <svg class="main-header__logo-image" role="img" width="32" height="36" aria-label="Логотип ароматное зерно кофе.">
