Добавляет скрипт мобильного меню

--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
             <use xlink:href="img/icons/stack.svg#logo-desktop"></use>
           </svg><span class="main-header__letters-right"></span>
         </a>
-        <nav class="menu-nav menu-nav--nojs">
+        <nav class="menu-nav menu-nav--closed">
           <ul class="menu-nav__list site-list">
             <li class="site-list__item">
               <a class="site-list__link site-list__link--current" href="#">
