--- a/source/index.html
+++ b/source/index.html
@@ -21,7 +21,7 @@
             <use xlink:href="img/icons/stack.svg#logo-desktop"></use>
           </svg><span class="main-header__letters-right"></span>
         </a>
-        <nav class="menu-nav menu-nav--nojs">
+        <nav class="menu-nav">
           <ul class="menu-nav__list site-list">
             <li class="site-list__item">
               <a class="site-list__link site-list__link--current" href="#">
@@ -49,11 +49,11 @@
         </nav>
         <div class="main-header__nav">
           <a class="main-header__icon" href="#">
-            <svg class="main-header__logo-icon" width="16" height="16">
+            <svg class="main-header__logo-icon">
               <use xlink:href="img/icons/stack.svg#user"></use>
             </svg>
           </a>
-          <a class="main-header__icon" href="#" width="16" height="16">
+          <a class="main-header__icon" href="#">
             <svg class="main-header__logo-icon">
               <use xlink:href="img/icons/stack.svg#basket"></use>
             </svg>
@@ -138,9 +138,9 @@
           </li>
         </ul>
         <div class="carousel__pagination">
-          <a class="carousel__togle" href="#"></a>
-          <a class="carousel__togle" href="#"></a>
-          <a class="carousel__togle" href="#"></a>
+          <a class="carousel__toggle carousel__toggle--active" href="#"></a>
+          <a class="carousel__toggle" href="#"></a>
+          <a class="carousel__toggle" href="#"></a>
         </div>
         <button class="carousel__button carousel__button--prev">
         </button>
@@ -275,7 +275,7 @@
             </fieldset>
             <div class="products__buttons">
               <button class="button button--app" type="submit">Применить</button>
-              <button class="button button--reset" type="submit">Сбросить</button>
+              <button class="button button--reset" type="reset">Сбросить</button>
             </div>
           </form>
         </section>
