Добавляет стилизацию чекбокса

--- a/source/index.html
+++ b/source/index.html
@@ -245,7 +245,7 @@
                 <li class="filter__item">
                   <label class="control">
                   <input class="control__input visually-hidden" type="checkbox" name="Ethiopia">
-                    <span class="control__mark checked"></span>
+                    <span class="control__mark"></span>
                     <span class="control__label">Эфиопия
                     </span>
                   </label>
