Добавляет состояния фильтру

--- a/source/index.html
+++ b/source/index.html
@@ -238,7 +238,7 @@
                 <li class="filter__item">
                   <label class="control">
                     <input class="control__input visually-hidden" type="checkbox" name="Brazil" checked>
-                    <span class="control__mark checked"></span>
+                    <span class="control__mark"></span>
                     <span class="control__label">Бразилия</span>
                   </label>
                 </li>
