--- a/source/index.html
+++ b/source/index.html
@@ -4,16 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Drink2Go Интернет-магазин кофейных напитков</title>
-    <link rel="preload" href="fonts/Montserrat-Medium.woff2" as="font" crossorigin="anonymous">
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/favicons/favicon-32x32.png" type="image/svg+xml">
 		<link rel="manifest" href="/manifest.webmanifest">
     <link rel="manifest" href="img/favicons/manifest.json">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preload" href="fonts/Montserrat-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/Montserrat-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="">
   </head>
   <body class="page-body">
-    <header class="main-header page-header">
+    <header class="main-header">
       <h1 class="visually-hidden">Интернет-магазин кофейных напитков</h1>
       <div class="main-header__wrapper">
         <a class="main-header__logo" href="index.html"><span class="main-header__letters-left"></span>
